--- a/package.json
+++ b/package.json
@@ -52,16 +52,14 @@
     "@osjs/cli": "^3.0.21",
     "@osjs/client": "^3.1.20",
     "@osjs/dialogs": "^3.0.17",
+    "@osjs/filemanager-application": "^1.4.2",
     "@osjs/freedesktop-sounds": "^3.0.1",
     "@osjs/gnome-icons": "^4.0.2",
     "@osjs/gui": "^4.0.29",
-    "@osjs/htmlviewer-application": "^1.2.3",
-    "@osjs/musicplayer-application": "^1.2.5",
     "@osjs/panels": "^3.0.22",
-    "@osjs/preview-application": "^1.1.13",
     "@osjs/server": "^3.0.54",
     "@osjs/settings-application": "^1.1.2",
-    "@osjs/standard-theme": "^4.0.7",
+    "@@osjs/windows8-theme": "^4.0.6",
     "hyperapp": "^1.2.10",
     "typeface-roboto": "0.0.75"
   },
