--- a/package.json
+++ b/package.json
@@ -26,40 +26,42 @@
   "author": "Anders Evenrud <andersevenrud@gmail.com>",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@osjs/eslint-config": "^1.0.2",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/runtime": "^7.9.6",
+    "@osjs/eslint-config": "^1.1.0",
     "@osjs/stylelint-config": "^1.0.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
-    "file-loader": "^5.0.2",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
-    "stylelint": "^13.2.0",
-    "webpack": "^4.41.6",
+    "stylelint": "^13.4.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-  
-    "@osjs/cli": "^3.0.21",
-    "@osjs/client": "^3.1.20",
-    "@osjs/dialogs": "^3.0.17",
+    "@osjs/cli": "^3.0.24",
+    "@osjs/client": "^3.1.36",
+    "@osjs/dialogs": "^3.0.19",
     "@osjs/filemanager-application": "^1.4.2",
-    "@osjs/freedesktop-sounds": "^3.0.1",
-    "@osjs/gnome-icons": "^4.0.2",
-    "@osjs/gui": "^4.0.29",
-    "@osjs/panels": "^3.0.22",
-    "@osjs/server": "^3.0.54",
-    "@osjs/settings-application": "^1.1.2",
-    "@@osjs/windows8-theme": "^4.0.6",
+    "@osjs/freedesktop-sounds": "^3.0.3",
+    "@osjs/gnome-icons": "^4.0.5",
+    "@osjs/gui": "^4.0.33",
+    "@osjs/panels": "^3.0.26",
+    "@osjs/server": "^3.1.2",
+    "@osjs/settings-application": "^1.1.6",
+    "@osjs/windows8-theme": "^4.0.6",
+    "codemirror": "^5.53.2",
+    "dijit": "^1.16.2",
+    "dojo": "^1.16.1",
     "hyperapp": "^1.2.10",
     "typeface-roboto": "0.0.75"
   },
